# dsci_524_pytest

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: dsci_524_pytest.rst  modules.rst
tests/: test_dsci_524_pytest.py
