[tool.poetry]
name = "dsci_524_pytest"
version = "0.1.0"
description = "Test python package for individual assignment 1"
authors = ["Neel Phaterpekar <nphaterp@ualberta.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
